--- a/package.json
+++ b/package.json
@@ -8,10 +8,13 @@
     "build": "tsc -b && vite build",
     "lint": "eslint .",
     "lint:fix": "eslint src/ --fix",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d dist" 
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.0.6",
+    "gh-pages": "^6.3.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "tailwindcss": "^4.0.6"
@@ -30,5 +33,6 @@
     "typescript-eslint": "^8.22.0",
     "vite": "^6.1.0",
     "vite-plugin-checker": "^0.8.0"
-  }
+  },
+  "homepage": "https://masahiro-kubota.github.io/react-ngg/"
 }
